# tinyDisplay

./: .coverage  .coveragerc  .gitignore  LICENSE  pyproject.toml  setup.cfg  temp.txt
docs/: Journel.txt  Makefile  background.rst  conf.py  design notes.txt  documentation-standards.rst  how-to.rst  index.rst  readme.rst  requirements.txt
docs/pageFiles/: pageFileExample.cfg  pageFileExampleFuture.cfg  weather_station_id.txt
htmlcov/: index.html  status.json  tinyDisplay___init___py.html  tinyDisplay_animate_py.html  tinyDisplay_font_py.html  tinyDisplay_render___init___py.html  tinyDisplay_render_manager_py.html  tinyDisplay_render_sequence_py.html  tinyDisplay_render_widget_py.html  tinyDisplay_utility_py.html
tests/: test_canvas.py  test_dataset.py  test_image.py  test_line.py  test_marquee.py  test_progressBar.py  test_rectangle.py  test_text.py  test_tinydisplay.py  test_widget_general.py
tinyDisplay/: animate.py  font.py  utility.py
tinyDisplay/render/: manager.py  sequence.py  widget.py
